--- a/StudentAccommodation/nbproject/private/private.properties
+++ b/StudentAccommodation/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.javax.mail.jar=C:\\Users\\Mayur\\Downloads\\javax.mail.jar
 user.properties.file=C:\\Users\\Mayur\\AppData\\Roaming\\NetBeans\\15\\build.properties
