--- a/StudentAccommodation/nbproject/project.properties
+++ b/StudentAccommodation/nbproject/project.properties
@@ -34,16 +34,24 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StudentAccommodation
 excludes=
 file.reference.AbsoluteLayout-RELEASE160.jar=AbsoluteLayout-RELEASE160.jar
+file.reference.AbsoluteLayout.jar=C:\\Users\\Mayur\\Downloads\\AED-Final--Project-main\\AED-Final--Project-main\\AbsoluteLayout.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar=db4o-8.0.184.15484-all-java5.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar-1=C:\\Users\\Mayur\\Downloads\\AED-Final--Project-main\\AED-Final--Project-main\\db4o-8.0.184.15484-all-java5.jar
 file.reference.itextpdf-5.4.3.jar=itextpdf-5.4.3.jar
+file.reference.itextpdf-5.4.3.jar-1=C:\\Users\\Mayur\\Downloads\\itextpdf-5.4.3.jar
 file.reference.javax.mail.jar=javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\Mayur\\Downloads\\javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.itextpdf-5.4.3.jar}:\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
-    ${file.reference.AbsoluteLayout-RELEASE160.jar}
+    ${file.reference.AbsoluteLayout-RELEASE160.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.itextpdf-5.4.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
